[wip] iliev-5 -- Added notebooks

--- a/tests/Iliev-6/Iliev-6.ipynb
+++ b/tests/Iliev-6/Iliev-6.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classical HII region expansion\n",
+    "# HII region expansion in $1 / r^2$ density profile\n",
     "\n",
     "## TOC\n",
     "* [Packages & Settings](#packages)\n",
@@ -60,7 +60,7 @@
     "\n",
     "Run\n",
     "```bash\n",
-    "wget -r –level=0 -E –ignore-length -x -k -p -erobots=off -np -N https://astronomy.sussex.ac.uk/\\~iti20/RT_comparison_project/RT_workshop_data/T5_results/\n",
+    "wget -r –level=0 -E –ignore-length -x -k -p -erobots=off -np -N https://astronomy.sussex.ac.uk/\\~iti20/RT_comparison_project/RT_workshop_data/T6_results/\n",
     "```\n",
     "to download Iliev-5 test snapshots!"
    ]
@@ -71,61 +71,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ILIEV_5_DIR = 'astronomy.sussex.ac.uk/~iti20/RT_comparison_project/RT_workshop_data/T5_results'\n",
+    "ILIEV_5_DIR = 'astronomy.sussex.ac.uk/~iti20/RT_comparison_project/RT_workshop_data/T6_results'\n",
     "\n",
     "IMAGE_DIR = './images'\n",
     "Path(IMAGE_DIR).mkdir(parents=True, exist_ok=True)\n",
-    "TIMES = [10, 30, 100, 200, 500]\n",
+    "TIMES = [1, 3, 10, 25, 75]\n",
     "\n",
     "BINARIES = {\n",
     "    'CAPREOLE+C2-RAY': {\n",
-    "        'row': 1, 'col': 3,\n",
     "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/c2ray{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "        'add': {t: {'path': f\"{ILIEV_5_DIR}/c2ray_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "    },\n",
-    "    'Enzo': {\n",
-    "        'row': 1, 'col': 4,\n",
-    "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/enzo{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "        'add': {t: {'path': f\"{ILIEV_5_DIR}/enzo_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "    },\n",
     "#     'Flash': {\n",
-    "#         'row': 2, 'col': 3,\n",
     "#         'orig': {t: {'path': f\"{ILIEV_5_DIR}/flash{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#         'add': {t: {'path': f\"{ILIEV_5_DIR}/flash_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#     },\n",
-    "#     'HART': {\n",
-    "#         'row': 2, 'col': 4,\n",
-    "#         'orig': {t: {'path': f\"{ILIEV_5_DIR}/Gnedin{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "#         'add': {t: {'path': f\"{ILIEV_5_DIR}/Gnedin_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "#     },\n",
+    "    'HART': {\n",
+    "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/hart{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
+    "        'add': {t: {'path': f\"{ILIEV_5_DIR}/hart_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
+    "    },\n",
     "#     'LICORICE': {\n",
-    "#         'row': 3, 'col': 3,\n",
-    "#         'orig': {t: {'path': f\"{ILIEV_5_DIR}/Licorice{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "#         'add': {t: {'path': f\"{ILIEV_5_DIR}/Licorice_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
+    "#         'orig': {t: {'path': f\"{ILIEV_5_DIR}/licorice{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
+    "#         'add': {t: {'path': f\"{ILIEV_5_DIR}/licorice_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#     },\n",
     "    'RSPH': {\n",
-    "        'row': 3, 'col': 4,\n",
-    "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/susa{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "        'add': {t: {'path': f\"{ILIEV_5_DIR}/susa_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
+    "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/rsph{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
+    "        'add': {t: {'path': f\"{ILIEV_5_DIR}/rsph_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "    },\n",
     "    'RH1D': {\n",
-    "        'row': 4, 'col': 3,\n",
-    "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/RH1D{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "        'add': {t: {'path': f\"{ILIEV_5_DIR}/RH1D_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
+    "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/rh1d{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
+    "        'add': {t: {'path': f\"{ILIEV_5_DIR}/rh1d_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "    },\n",
     "#     'ZEUS-MP': {\n",
-    "#         'row': 4, 'col': 4,\n",
-    "#         'orig': {t: {'path': f\"{ILIEV_5_DIR}/Zeus{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "#         'add': {t: {'path': f\"{ILIEV_5_DIR}/Zeus_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
+    "#         'orig': {t: {'path': f\"{ILIEV_5_DIR}/zeus{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
+    "#         'add': {t: {'path': f\"{ILIEV_5_DIR}/zeus_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#     },\n",
     "}\n",
     "\n",
     "Rhyme_CaseA = {\n",
-    "    0: {'path': f'./Iliev-5-CaseA-1000/Iliev-5-CaseA-000000.chombo.h5', },\n",
+    "    0: {'path': f'./Iliev-6-CaseA-PowerLaw/Iliev-6-CaseA-000000.chombo.h5', },\n",
     "}\n",
     "\n",
     "Rhyme_CaseB = {\n",
-    "    0: {'path': f'./Iliev-5-CaseB-1000/Iliev-5-CaseB-000000.chombo.h5', },\n",
+    "    0: {'path': f'./Iliev-6-CaseB-PowerLaw/Iliev-6-CaseB-000000.chombo.h5', },\n",
     "}\n",
     "\n",
     "# Check if files exist\n",
@@ -264,9 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def check_cell(attr='n', x=1, y=1, z=1):\n",
@@ -277,92 +263,6 @@
     "\n",
     "if __name__ == '__main__' and '__file__' not in globals():\n",
     "    check_cell(attr='T', x=64)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Add sections\n",
-    "\n",
-    "def plot_maps(x, y, RA, RB, heatmaps, zmin, zmax, attr_title):\n",
-    "    # RA, RB, C2Ray, Enzo, Flash, Hart, Licorice, Rsph, Rh1d, Zeus\n",
-    "    fig = fig = make_subplots(\n",
-    "        4, 4,\n",
-    "        column_widths=[1] * 4, row_heights=[1] * 4,\n",
-    "        specs=[\n",
-    "            [{\"type\": \"heatmap\", \"rowspan\": 2, \"colspan\": 2}, None, {\"type\": \"heatmap\"}, {\"type\": \"heatmap\"}],\n",
-    "            [None, None, {\"type\": \"heatmap\"}, {\"type\": \"heatmap\"}],\n",
-    "            [{\"type\": \"heatmap\", \"rowspan\": 2, \"colspan\": 2}, None, {\"type\": \"heatmap\"}, {\"type\": \"heatmap\"}],\n",
-    "            [None, None, {\"type\": \"heatmap\"}, {\"type\": \"heatmap\"}],\n",
-    "        ],\n",
-    "        vertical_spacing=0.025, horizontal_spacing=0.025,\n",
-    "        shared_xaxes=True, shared_yaxes=True,\n",
-    "        x_title='x [px]', y_title='y [px]',\n",
-    "    )\n",
-    "    \n",
-    "    fig.layout.annotations[0][\"font\"] = dict(size=18, color='black')\n",
-    "    fig.layout.annotations[1][\"font\"] = dict(size=18, color='black')\n",
-    "    \n",
-    "    if RA is not None:\n",
-    "        fig.add_trace(go.Heatmap(\n",
-    "            x=x, y=y, z=RA, name=\"Rhyme (Case A)\",\n",
-    "            zauto=False, zmin=zmin, zmax=zmax,\n",
-    "            colorbar=dict(\n",
-    "                title=attr_title, titleside='bottom', titlefont=dict(size=18),\n",
-    "                thicknessmode='pixels', thickness=10, tickfont=dict(size=18),\n",
-    "            ),\n",
-    "            colorscale='Spectral', showscale=True,\n",
-    "        ), 1, 1)\n",
-    "        \n",
-    "        fig.update_xaxes(row=1, col=1, mirror=True, showticklabels=False,)\n",
-    "        fig.update_yaxes(\n",
-    "            row=1, col=1, mirror=True, titlefont=dict(size=18), tickfont=dict(size=14),\n",
-    "            tickmode='array', tickvals=[0, 5, 10, 15], ticktext=['0', '5', '10', '15'],\n",
-    "        )\n",
-    "        \n",
-    "    if RB is not None:\n",
-    "        fig.add_trace(go.Heatmap(\n",
-    "            x=x, y=y, z=RA, name=\"Rhyme (Case B)\", zauto=False, zmin=zmin, zmax=zmax,\n",
-    "            colorscale='Spectral', showscale=False,\n",
-    "        ), 3, 1)\n",
-    "        \n",
-    "        fig.update_xaxes(\n",
-    "            row=3, col=1, mirror=True, titlefont=dict(size=18), tickfont=dict(size=14),\n",
-    "            tickmode='array', tickvals=[0, 5, 10, 15], ticktext=['0', '5', '10', '15'],\n",
-    "        )\n",
-    "        fig.update_yaxes(\n",
-    "            row=3, col=1, mirror=True, titlefont=dict(size=18), tickfont=dict(size=14),\n",
-    "            tickmode='array', tickvals=[0, 5, 10, 15], ticktext=['0', '5', '10', '15'],\n",
-    "        )\n",
-    "        \n",
-    "    for name, heatmap in heatmaps.items():\n",
-    "        fig.add_trace(go.Heatmap(\n",
-    "            x=x, y=y, z=heatmap, name=name, zauto=False, zmin=zmin, zmax=zmax,\n",
-    "            colorscale='Spectral', showscale=False,\n",
-    "        ), BINARIES[name]['row'], BINARIES[name]['col'])\n",
-    "        \n",
-    "        if BINARIES[name]['row'] == 4:\n",
-    "            fig.update_xaxes(\n",
-    "                row=BINARIES[name]['row'], col=BINARIES[name]['col'],\n",
-    "                mirror=True, titlefont=dict(size=18), tickfont=dict(size=14),\n",
-    "                tickmode='array', tickvals=[0, 5, 10, 15], ticktext=['0', '5', '10', '15'],\n",
-    "            )\n",
-    "        else:\n",
-    "            fig.update_xaxes(row=BINARIES[name]['row'], col=BINARIES[name]['col'], mirror=True, showticklabels=False,)\n",
-    "        \n",
-    "        fig.update_yaxes(row=BINARIES[name]['row'], col=BINARIES[name]['col'], mirror=True, showticklabels=False,)\n",
-    "        \n",
-    "    width, height = 1100, 1000\n",
-    "    \n",
-    "    fig.update_layout(\n",
-    "        width=width, height=height,\n",
-    "        margin=dict(b=60, t=10, l=60, r=60),\n",
-    "    )\n",
-    "        \n",
-    "    return fig"
    ]
   },
   {
@@ -378,33 +278,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fHI_maps(t=200):\n",
+    "def HI_maps(t=100):\n",
     "    if t not in DATA.keys():\n",
     "        print(f\"Don't have a snapshot at t = {t} Myr\")\n",
     "        return\n",
-    "    \n",
-    "    heatmaps = {}\n",
-    "    \n",
-    "    for sn, sim in DATA[t].items():\n",
-    "        if sn in ['Rhyme_CaseA', 'Rhyme_CaseB']:\n",
-    "            continue\n",
-    "        \n",
-    "        heatmaps[sn] = np.log10(sim['nHI'][:, :, 0] / (sim['nHI'][:, :, 0] + sim['nHII'][:, :, 0]))\n",
-    "        \n",
-    "    RA = np.log10(DATA[t]['Rhyme_CaseA']['nHI'][:, :, 0] / (DATA[t]['Rhyme_CaseA']['nHI'][:, :, 0] + DATA[t]['Rhyme_CaseA']['nHII'][:, :, 0]))\n",
-    "    RB = np.log10(DATA[t]['Rhyme_CaseB']['nHI'][:, :, 0] / (DATA[t]['Rhyme_CaseB']['nHI'][:, :, 0] + DATA[t]['Rhyme_CaseB']['nHII'][:, :, 0]))\n",
-    "\n",
-    "    zmin = np.min(RA)\n",
-    "    zmax = np.max(RA)\n",
-    "    \n",
-    "    x = np.linspace(0, 15, 128)\n",
-    "        \n",
-    "    fig = plot_maps(x, x, RA, RB, heatmaps, zmin, zmax, 'fHI')\n",
-    "    \n",
-    "    fig.show()\n",
-    "\n",
-    "if __name__ == '__main__' and '__file__' not in globals():\n",
-    "    fHI_maps(t=500)"
+    "    for sn, sim in DATA[t]:\n",
+    "        pass\n",
+    "        "
    ]
   },
   {
@@ -436,7 +316,7 @@
     "\n",
     "\n",
     "def i_front_pos():\n",
-    "    xs = np.sqrt(3) * np.linspace(0, 15, 128)\n",
+    "    xs = np.sqrt(3) * np.linspace(0, 0.8, 128)\n",
     "    \n",
     "    for t, snap in DATA.items():\n",
     "        for sn, sim in DATA[t].items():\n",
@@ -447,12 +327,13 @@
     "            nHII_prof = np.einsum('iii->i', sim['nHII'])\n",
     "            fHI_prof = nHII_prof / (nHI_prof + nHII_prof)\n",
     "\n",
-    "            pos = i_front_get_position(xs, fHI_prof)\n",
+    "            pos = i_front_get_position(xs, fHI_prof, f0=0.9)\n",
     "            \n",
     "            if len(pos) == 1:\n",
     "                sim['I-front']['pos_kpc'] = pos[0][0]\n",
     "            else:\n",
-    "                print(f\"[Err] Could not extract the I-front position!\")\n",
+    "                sim['I-front']['pos_kpc'] = None\n",
+    "                print(f\"{sn}-{t}: {pos}\")\n",
     "\n",
     "if __name__ == '__main__' and '__file__' not in globals():\n",
     "    i_front_pos()"
@@ -497,8 +378,8 @@
     "            type='linear', mirror=True, title='<i>x</i><sub>I-front</sub> [kpc]',\n",
     "            titlefont=dict(size=18),\n",
     "            tickmode='array',\n",
-    "            tickvals=list(range(2, 11, 2)),\n",
-    "            ticktext=[str(yy) for yy in range(2, 11, 2)],\n",
+    "            tickvals=np.linspace(0.2, 1.2, 6),\n",
+    "            ticktext=[f\"{yy:2.1f}\" for yy in np.linspace(0.2, 1.2, 6)],\n",
     "            tickfont=dict(size=14),\n",
     "        ),\n",
     "    )\n",
