--- a/tests/Iliev-7/Iliev-7.ipynb
+++ b/tests/Iliev-7/Iliev-7.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# run wget http://musewiki.aip.de/local--files/dastools:sourcedet/CubEx-1.8_20180904.tar.gz --no-check-certificate\n",
+    "# run wget -r –level=0 -E –ignore-length -x -k -p -erobots=off -np -N https://astronomy.sussex.ac.uk/\\~iti20/RT_comparison_project/RT_workshop_data/T7_results/\n",
     "\n",
     "RHYME_OUTPUT_DIR = './output'\n",
     "ILIEV_7_DIR = 'astronomy.sussex.ac.uk/~iti20/RT_comparison_project/RT_workshop_data/T7_results'\n",
@@ -143,26 +143,37 @@
     "    },\n",
     "}\n",
     "\n",
-    "Rhyme = {\n",
-    "    1: {'path': f'{RHYME_OUTPUT_DIR}/iliev-7-000001.chombo.h5', },\n",
-    "    3: {'path': f'{RHYME_OUTPUT_DIR}/iliev-7-000003.chombo.h5', },\n",
-    "    10: {'path': f'{RHYME_OUTPUT_DIR}/iliev-7-000010.chombo.h5', },\n",
-    "    25: {'path': f'{RHYME_OUTPUT_DIR}/iliev-7-000025.chombo.h5', },\n",
-    "    75: {'path': f'{RHYME_OUTPUT_DIR}/iliev-7-000075.chombo.h5', },\n",
+    "Rhyme_CaseA = {\n",
+    "    1: {'path': f'./CaseA/Iliev-7-CaseA-000001.chombo.h5', },\n",
+    "    3: {'path': f'./CaseA/Iliev-7-CaseA-000003.chombo.h5', },\n",
+    "    10: {'path': f'./CaseA/Iliev-7-CaseA-000010.chombo.h5', },\n",
+    "    25: {'path': f'./CaseA/Iliev-7-CaseA-000025.chombo.h5', },\n",
+    "#     75: {'path': f'./CaseA/Iliev-7-CaseA-000075.chombo.h5', },\n",
+    "}\n",
+    "\n",
+    "Rhyme_CaseB = {\n",
+    "    1: {'path': f'./CaseB/Iliev-7-CaseB-000001.chombo.h5', },\n",
+    "    3: {'path': f'./CaseB/Iliev-7-CaseB-000003.chombo.h5', },\n",
+    "    10: {'path': f'./CaseB/Iliev-7-CaseB-000010.chombo.h5', },\n",
+    "    25: {'path': f'./CaseB/Iliev-7-CaseB-000025.chombo.h5', },\n",
+    "#     75: {'path': f'./CaseB/Iliev-7-CaseB-000075.chombo.h5', },\n",
     "}\n",
     "\n",
     "# Check if files exist\n",
-    "for sim_name, sim in BINARIES.items():\n",
-    "    def check_if_exist(path):\n",
-    "        if not Path(snap['path']).is_file():\n",
-    "            print(f\"Not found: {snap['path']}\")\n",
-    "            \n",
+    "def check_if_exist(path):\n",
+    "    if not Path(snap['path']).is_file():\n",
+    "        print(f\"Not found: {snap['path']}\")\n",
+    "        \n",
+    "for sim_name, sim in BINARIES.items():      \n",
     "    for snap in sim['orig'].values():\n",
     "        check_if_exist(snap['path'])\n",
     "    for snap in sim['add'].values():\n",
     "        check_if_exist(snap['path'])\n",
-    "    for snap in Rhyme.values():\n",
-    "        check_if_exist(snap['path'])"
+    "\n",
+    "for snap in Rhyme_CaseA.values():\n",
+    "    check_if_exist(snap['path'])\n",
+    "for snap in Rhyme_CaseB.values():\n",
+    "    check_if_exist(snap['path'])"
    ]
   },
   {
@@ -208,12 +219,12 @@
     "            \n",
     "            f.close()\n",
     "            \n",
-    "    for snap_time, snap in Rhyme.items():\n",
+    "    for snap_time, snap in Rhyme_CaseB.items():\n",
     "        if snap_time not in result:\n",
     "            result[snap_time] = {}\n",
     "\n",
-    "        if 'Rhyme' not in result[snap_time]:\n",
-    "            result[snap_time]['Rhyme'] = {}\n",
+    "        if 'Rhyme_CaseB' not in result[snap_time]:\n",
+    "            result[snap_time]['Rhyme_CaseB'] = {}\n",
     "            \n",
     "        r = PyRhyme(snap['path'])\n",
     "        domain = r.dataset.problem_domain\n",
@@ -233,12 +244,47 @@
     "        \n",
     "        M = np.sqrt(vx**2 + vy**2 + vz**2) / np.sqrt(Gamma * p / (C.m_p.to(U.g).value * rho))\n",
     "        \n",
-    "        result[snap_time]['Rhyme']['n'] = rho\n",
-    "        result[snap_time]['Rhyme']['nHI'] = fHI\n",
-    "        result[snap_time]['Rhyme']['nHII'] = 1.0 - fHI\n",
-    "        result[snap_time]['Rhyme']['T'] = T_orig\n",
-    "        result[snap_time]['Rhyme']['p'] = p\n",
-    "        result[snap_time]['Rhyme']['M'] = M\n",
+    "        result[snap_time]['Rhyme_CaseB']['n'] = rho\n",
+    "        result[snap_time]['Rhyme_CaseB']['nHI'] = fHI\n",
+    "        result[snap_time]['Rhyme_CaseB']['nHII'] = 1.0 - fHI\n",
+    "        result[snap_time]['Rhyme_CaseB']['T'] = T_orig\n",
+    "        result[snap_time]['Rhyme_CaseB']['p'] = p\n",
+    "        result[snap_time]['Rhyme_CaseB']['M'] = M\n",
+    "        \n",
+    "        r.dataset.close_current()\n",
+    "        r.dataset.clean_all()\n",
+    "        \n",
+    "    for snap_time, snap in Rhyme_CaseA.items():\n",
+    "        if snap_time not in result:\n",
+    "            result[snap_time] = {}\n",
+    "\n",
+    "        if 'Rhyme_CaseA' not in result[snap_time]:\n",
+    "            result[snap_time]['Rhyme_CaseA'] = {}\n",
+    "            \n",
+    "        r = PyRhyme(snap['path'])\n",
+    "        domain = r.dataset.problem_domain\n",
+    "        \n",
+    "        v = r.load_variables(silent=True)\n",
+    "        \n",
+    "        rho = v['rho'][0].reshape(domain) * (1 * v['rho'][1]).to(U.cm**-3).value\n",
+    "        vx = v['rho_u'][0].reshape(domain) / rho * (1 * U.Mpc / U.Myr).to(U.cm / U.s).value\n",
+    "        vy = v['rho_v'][0].reshape(domain) / rho * (1 * U.Mpc / U.Myr).to(U.cm / U.s).value\n",
+    "        vz = v['rho_w'][0].reshape(domain) / rho * (1 * U.Mpc / U.Myr).to(U.cm / U.s).value\n",
+    "        T_orig = v['temp'][0].reshape(domain)\n",
+    "        fHI = v['ntr_frac_0'][0].reshape(domain)\n",
+    "        p, _, T = r.calc_temperature(v, X=1.0, Y=0.0, Gamma=5./3.)\n",
+    "        T = T[0].reshape(domain)\n",
+    "        p = p.reshape(domain)\n",
+    "        p *= C.m_p.to(U.g).value * (1 * r.dataset.active['h5']['attrs']['pressure_unit']).to(U.cm**-3 * U.cm**2 / U.s**2).value\n",
+    "        \n",
+    "        M = np.sqrt(vx**2 + vy**2 + vz**2) / np.sqrt(Gamma * p / (C.m_p.to(U.g).value * rho))\n",
+    "        \n",
+    "        result[snap_time]['Rhyme_CaseA']['n'] = rho\n",
+    "        result[snap_time]['Rhyme_CaseA']['nHI'] = fHI\n",
+    "        result[snap_time]['Rhyme_CaseA']['nHII'] = 1.0 - fHI\n",
+    "        result[snap_time]['Rhyme_CaseA']['T'] = T_orig\n",
+    "        result[snap_time]['Rhyme_CaseA']['p'] = p\n",
+    "        result[snap_time]['Rhyme_CaseA']['M'] = M\n",
     "        \n",
     "        r.dataset.close_current()\n",
     "        r.dataset.clean_all()\n",
@@ -259,14 +305,15 @@
    "outputs": [],
    "source": [
     "def line_plot(attr='nHI', attr_title='X<sub>HI</sub>'):\n",
-    "    width = 500\n",
+    "    width = 700\n",
     "    height = 500\n",
     "    \n",
     "    for t in DATA.keys():\n",
+    "        print(f'time: {t} Myr')\n",
     "        fig = go.Figure()\n",
     "        \n",
     "        for sn, sim in DATA[t].items():\n",
-    "            if sn == 'Rhyme':\n",
+    "            if sn in ['Rhyme_CaseA', 'Rhyme_CaseB']:\n",
     "                continue\n",
     "\n",
     "            shape = sim[attr].shape\n",
@@ -278,15 +325,21 @@
     "            \n",
     "            fig.add_trace(go.Scatter(\n",
     "                y=y, name=sn,\n",
-    "                mode='lines', line=dict(width=1),\n",
+    "                mode='lines', line=dict(width=0.5),\n",
     "            ))\n",
     "            \n",
-    "        shape = DATA[t]['Rhyme'][attr].shape\n",
+    "        shape = DATA[t]['Rhyme_CaseA'][attr].shape\n",
     "        fig.add_trace(go.Scatter(\n",
-    "            y=DATA[t]['Rhyme'][attr][int(shape[0]/2), int(shape[1]/2), :], name='Rhyme',\n",
+    "            y=DATA[t]['Rhyme_CaseA'][attr][int(shape[0]/2), int(shape[1]/2), :], name='Rhyme_CaseA',\n",
+    "            mode='lines', line=dict(color='green', width=1.5),\n",
+    "        ))\n",
+    "            \n",
+    "        shape = DATA[t]['Rhyme_CaseB'][attr].shape\n",
+    "        fig.add_trace(go.Scatter(\n",
+    "            y=DATA[t]['Rhyme_CaseB'][attr][int(shape[0]/2), int(shape[1]/2), :], name='Rhyme_CaseB',\n",
     "            mode='lines', line=dict(color='black', width=2.5),\n",
     "        ))\n",
-    "        \n",
+    "\n",
     "        fig.update_layout(\n",
     "            # title=f't = {t} Myr',\n",
     "            width=width, height=height,\n",
@@ -294,8 +347,8 @@
     "            xaxis=dict(mirror=True, type='linear', title='x [px]', exponentformat='power',),\n",
     "            yaxis=dict(mirror=True, type='log', title=attr_title, exponentformat='power',),\n",
     "            legend=dict(\n",
-    "                xanchor='left', yanchor='top', x=0.04, y=0.99\n",
-    "            ), showlegend=False,\n",
+    "                xanchor='left', yanchor='top', x=1.04, y=0.99\n",
+    "            ), showlegend=True,\n",
     "        )\n",
     "        \n",
     "        fig.write_image(f'{IMAGE_DIR}/{attr}-{t}.png', width=width, height=height, scale=3)\n",
@@ -341,7 +394,9 @@
     "        zmax = np.nanmax([np.nanmax(x[attr]) for x in DATA[t].values()])\n",
     "        \n",
     "        for ip, (sn, sim) in enumerate(DATA[t].items()):\n",
-    "            if sn == 'Rhyme':\n",
+    "            if sn == 'Rhyme_CaseA':\n",
+    "                continue\n",
+    "            if sn == 'Rhyme_CaseB':\n",
     "                irow, icol = 1, 1\n",
     "            elif sn == 'CAPREOLE+C2-RAY':\n",
     "                irow, icol = 1, 2\n",
@@ -459,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
